src/objects/Order_Operation__c.object
<CustomObject>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>ActivityType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualFinishDate__c</fullName>
        <label>ActualFinishDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualFinishTime__c</fullName>
        <label>ActualFinishTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualStartDate__c</fullName>
        <label>ActualStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActualStartTime__c</fullName>
        <label>ActualStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assembly__c</fullName>
        <label>Assembly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAT__c</fullName>
        <label>CAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationNum__c</fullName>
        <label>ConfirmationNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControlKey__c</fullName>
        <label>Control Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostElement__c</fullName>
        <label>CostElement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EarlyFinishDate__c</fullName>
        <label>EarlyFinishDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarlyFinishTime__c</fullName>
        <label>EarlyFinishTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarlyStartDate__c</fullName>
        <label>EarlyStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarlyStartTime__c</fullName>
        <label>EarlyStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EquipmentNumber__c</fullName>
        <label>Equipment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalLocation__c</fullName>
        <label>Func.Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralCounter__c</fullName>
        <label>General counter for order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupCounter__c</fullName>
        <label>Group Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internalcounter__c</fullName>
        <label>Internal counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobOwner__c</fullName>
        <label>Job Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestFinishDate__c</fullName>
        <label>LatestFinishDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestFinishTime__c</fullName>
        <label>LatestFinishTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestStartDate__c</fullName>
        <label>LatestStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestStartTime__c</fullName>
        <label>LatestStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NextPlannedDate__c</fullName>
        <label>NextPlannedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NodeNumber__c</fullName>
        <label>Number of the task list node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifObjNumber__c</fullName>
        <label>NotifObjNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotificationNum__c</fullName>
        <label>NotificationNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjNumber__c</fullName>
        <label>ObjNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oper__c</fullName>
        <label>Oper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationNumber__c</fullName>
        <description>OperationNumber</description>
        <label>OperationNumber</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Number__c</fullName>
        <label>Operation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationsRoutingNum__c</fullName>
        <label>Routing Number of operations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderObjNumber__c</fullName>
        <label>Order ObjNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Operations</relationshipLabel>
        <relationshipName>OrderOperations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ordertmp__c</fullName>
        <externalId>true</externalId>
        <label>OrderTmp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_NotifNumber__c</fullName>
        <label>Root Notif Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_ObjNumber__c</fullName>
        <label>Root Notif OBJNBR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <label>SAPId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortText1__c</fullName>
        <label>Operation short text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortText2__c</fullName>
        <label>Second line of the description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StTextKy__c</fullName>
        <label>StTextKy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stat__c</fullName>
        <label>Stat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemCondition__c</fullName>
        <label>SystemCondition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskListGroupKey__c</fullName>
        <label>Key for Task List Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskListType__c</fullName>
        <label>Task List Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkCenter__c</fullName>
        <label>WorkCenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Operation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Counter__c</columns>
        <columns>Order__c</columns>
        <columns>SAP_Id__c</columns>
        <columns>TaskListType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Operation Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Operations</pluralLabel>
    <recordTypes>
        <fullName>JOB_Owner</fullName>
        <active>true</active>
        <label>JOB-Owner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sample</fullName>
        <active>true</active>
        <label>Sample</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>